# pyvelora

./: .gitignore  README.md  examples.py  pyproject.toml
src/pyvelora/: __init__.py
src/pyvelora.egg-info/: PKG-INFO
src/pyvelora/constants/: __init__.py  constants.py
src/pyvelora/core/: __init__.py  array_base.py  matrix.py  tensor.py  vector.py
src/pyvelora/core/matrix/: __init__.py  arithmetic.py  comparison.py  indexing.py  matrix.py
src/pyvelora/core/tensor/: __init__.py  arithmetic.py  comparison.py  indexing.py  tensor.py
src/pyvelora/core/vector/: __init__.py  arithmetic.py  comparison.py  indexing.py  vector.py
src/pyvelora/diffeq/ode/: __init__.py  solution.py  solve.py  system.py
src/pyvelora/diffeq/ode/plotting/: phase_plot.py  phase_portrait.py  solution_plot.py
src/pyvelora/diffyq/: __init__.py  ivp.py  linear_system.py  second_order.py  system.py  utils.py
src/pyvelora/linalg/: __init__.py  _eigen_utils.py  basic.py  checks.py  constructors.py  decomposition.py  decompositions.py  eigen.py  matrix_functions.py  matrix_ops.py  norms.py  products.py  properties.py  rref.py  solve.py  solvers.py  subspaces.py  tensor_ops.py  vector_ops.py
src/pyvelora/plotting/: __init__.py  phase.py  solution.py  trajectory.py  utils.py  vector_field.py
src/pyvelora/tests/: array_base_test.py  imports_test.py  matrix_ops_test.py  matrix_test.py  ode_test.py  tensor_test.py  vector_test.py
src/pyvelora/tests/constants/: constants_test.py
src/pyvelora/tests/core/: array_base_test.py  matrix_test.py  tensor_test.py  vector_test.py
src/pyvelora/tests/diffeq/: diffyq_ivp_test.py  diffyq_linear_system_test.py  diffyq_second_order_test.py  diffyq_system_test.py  diffyq_utils_test.py
src/pyvelora/tests/linalg/: linalg_basic_test.py  linalg_checks_test.py  linalg_constructors_test.py  linalg_decompositions_test.py  linalg_eigen_test.py  linalg_matrix_functions_test.py  linalg_norms_test.py  linalg_products_test.py  linalg_properties_test.py  linalg_rref_test.py  linalg_solve_test.py  linalg_subspaces_test.py
src/pyvelora/tests/utils/: utils_errors_test.py  utils_numpy_utils_test.py  utils_precision_test.py  utils_validation_test.py
src/pyvelora/utils/: __init__.py  errors.py  numpy_utils.py  precision.py  validation.py
