[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvelora"
version = "0.3.3"
description = "Lightweight mathematical backend for physics libraries."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Noah Ryan" }
]
keywords = ["linear-algebra", "vector", "matrix", "tensor", "scientific-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "build>=1.3",
    "twine>=6.2",
]

[project.urls]
Homepage = "https://pypi.org/project/pyvelora/"
Repository = "https://github.com/njryan-boou/pyvelora"
Issues = "https://github.com/njryan-boou/pyvelora/issues"
